refactor delete comment api

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,7 +10,9 @@
       "@/config/*": ["src/config/*"],
       "@/constants/*": ["src/constants/*"],
       "@/components/*": ["src/components/*"],
-      "@/libs/*": ["src/libs/*"]
+      "@/libs/*": ["src/libs/*"],
+      "@/utils/*": ["src/utils/*"],
+      "@/models/*": ["src/models/*"]
     }
   },
   "exclude": ["node_modules"]
