change fonts and nav design

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,7 +12,8 @@
       "@/components/*": ["src/components/*"],
       "@/libs/*": ["src/libs/*"],
       "@/utils/*": ["src/utils/*"],
-      "@/models/*": ["src/models/*"]
+      "@/models/*": ["src/models/*"],
+      "@/hooks/*": ["src/hooks/*"]
     }
   },
   "exclude": ["node_modules"]
