--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ya-magazine",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aemzayn/ya-magz/"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
