--- a/package.json
+++ b/package.json
@@ -32,15 +32,19 @@
     "next-auth": "^3.27.0",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
+    "next-plugin-preact": "^3.0.6",
     "next-pwa": "^5.2.21",
     "nextjs-redirect": "^5.0.0",
     "nprogress": "^0.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "preact": "^10.5.14",
+    "preact-render-to-string": "^5.1.19",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
     "react-schemaorg": "^1.3.1",
     "react-share": "^4.3.1",
+    "react-ssr-prepass": "^1.4.0",
     "reading-time": "^1.3.0",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1",
