update: dependancies, eslint, formatting and duplicate props

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,19 @@
 NEXTAUTH_URL=http://localhost:3000
+MONGODB_URI=mongodb://localhost:27017/ya-magz
 
+# Google Docs
+NEXT_PUBLIC_SHEETS_DEPLOYMENT_ID=
+NEXT_PUBLIC_SHEETS_URL=
+
+# Strapi
+NEXT_PUBLIC_STRAPI_API_URL=http://localhost:1337
+STRAPI_API_URL=
+
+# Google
 GOOGLE_ID=
 GOOGLE_SECRET=
+NEXT_AUTH_SECRET=
+
+NEXT_PUBLIC_CLIENT_URL=
+NEXT_PUBLIC_SERVER_URL=
+SERVER_URL=
