--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,22 @@
 {
   "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "jsx": "react",
     "baseUrl": ".",
     "paths": {
       "@/public/*": ["public/*"],
-      "@/cms/*": ["cms/*"],
+      "@/contents/*": ["contents/*"],
       "@/styles/*": ["styles/*"],
       "@/assets/*": ["src/assets/*"],
       "@/config/*": ["src/config/*"],
@@ -15,7 +27,9 @@
       "@/models/*": ["src/models/*"],
       "@/hooks/*": ["src/hooks/*"],
       "@/module/*": ["src/module/*"]
-    }
+    },
+    "incremental": true
   },
+  "include": ["src/**/*.js"],
   "exclude": ["node_modules"]
 }
