--- a/.github/workflows/refresh_articles.yml
+++ b/.github/workflows/refresh_articles.yml
@@ -35,4 +35,4 @@ jobs:
         with:
           force: true
           directory: "."
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
